ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/AML_Check__c.object-meta.xml
<CustomObject>
    <label>AML Check</label>
    <nameField>
        <displayFormat>AML-{00000}</displayFormat>
        <label>AML Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AML Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>