ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Applicant_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Number__c</fullName>
    <label>Applicant Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>