ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/BE_CVO__c.field-meta.xml
<CustomField>
    <fullName>BE_CVO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BE/CVO</label>
    <type>Checkbox</type>
</CustomField>