ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/BE_CVO_Decision__c.field-meta.xml
<CustomField>
    <fullName>BE_CVO_Decision__c</fullName>
    <label>BE/CVO Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>False Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>