ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AML Checks</relationshipLabel>
    <relationshipName>AML_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>