ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/CMU__c.field-meta.xml
<CustomField>
    <fullName>CMU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMU</label>
    <type>Checkbox</type>
</CustomField>