ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description>Stores Content Document Id of the Document uploaded.</description>
    <label>Content Document Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>