ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Analyst</label>
    <type>Checkbox</type>
</CustomField>