ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Credit_Head__c.field-meta.xml
<CustomField>
    <fullName>Credit_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Head</label>
    <type>Checkbox</type>
</CustomField>