ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documents</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please add AML Type document only.</errorMessage>
        <filterItems>
            <field>Documents__c.Document_Type__c</field>
            <operation>equals</operation>
            <value>AML</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Documents__c</referenceTo>
    <relationshipLabel>AML Checks</relationshipLabel>
    <relationshipName>AML_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>