ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/List_Name__c.field-meta.xml
<CustomField>
    <fullName>List_Name__c</fullName>
    <label>List Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>