ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Matched_base__c.field-meta.xml
<CustomField>
    <fullName>Matched_base__c</fullName>
    <label>Matched Base</label>
    <length>100</length>
    <type>Text</type>
</CustomField>