ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/ML_Address__c.field-meta.xml
<CustomField>
    <fullName>ML_Address__c</fullName>
    <label>ML Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>