ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/ML_City__c.field-meta.xml
<CustomField>
    <fullName>ML_City__c</fullName>
    <label>ML City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>