ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/ML_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>ML_Date_Of_Birth__c</fullName>
    <label>ML Date Of Birth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>