ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/ML_Description__c.field-meta.xml
<CustomField>
    <fullName>ML_Description__c</fullName>
    <label>ML Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>