ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/ML_Id__c.field-meta.xml
<CustomField>
    <fullName>ML_Id__c</fullName>
    <label>ML Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>