ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>