ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <length>30</length>
    <type>Text</type>
</CustomField>