ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Nationality_Score__c.field-meta.xml
<CustomField>
    <fullName>Nationality_Score__c</fullName>
    <label>Nationality Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>