ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Partial_KYC_Flag__c.field-meta.xml
<CustomField>
    <fullName>Partial_KYC_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial KYC Flag</label>
    <type>Checkbox</type>
</CustomField>