ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Remarks_BE_CVO__c.field-meta.xml
<CustomField>
    <fullName>Remarks_BE_CVO__c</fullName>
    <label>Remarks_BE_CVO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>