ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Remarks_CMU__c.field-meta.xml
<CustomField>
    <fullName>Remarks_CMU__c</fullName>
    <label>Remarks_CMU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>