ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Remarks_Credit_Head__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Credit_Head__c</fullName>
    <label>Remarks_Credit Head</label>
    <length>100</length>
    <type>Text</type>
</CustomField>