ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/fields/Suspect_Match__c.field-meta.xml
<CustomField>
    <fullName>Suspect_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspect Match</label>
    <type>Checkbox</type>
</CustomField>