ProdIND/ProdPrograms/force-app/main/default/objects/AML_Check__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ML_Id__c</columns>
    <columns>BE_CVO_Decision__c</columns>
    <columns>CMU_Decision__c</columns>
    <columns>CA_Decision__c</columns>
    <columns>CH_Decision__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>